# DEMO_CarIntelligentCustomerService

./: .env.example  .gitignore  PRODUCT_ONE_PAGE.md  README.en.md  README.md  pyproject.toml  run.py
app/: main.py
app/routers/: agent.py  chat.py  knowledge.py  mock.py  tickets.py
docs/: PRD.md  Plan.md  api-contracts.md  startup.md  智能客服意图识别体系.md
docs/prototypes/: A02-知识库管理.html  C00-用户登录页.html  C01-客户端对话页.html  D01-Agent调试页.html  README.md  S01-坐席工作台.html  S02-当前对话列表.html  index.html
docs/澄清文档/: 背景信息.md
frontend/: README.md  package-lock.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/lib/: config.ts
frontend/src/mocks/: chat.ts  documents.ts  (+2 more)
knowledge-base/: README.md  manifest.md  来源与时效.md
knowledge-base/人工介入/: 安抚话术库.md  客服摘要字段清单.md  转人工触发规则.md
knowledge-base/价格/: 极氪001_价格配置表.md  极氪007GT_价格配置表.md  极氪007_价格配置表.md  极氪009_价格配置表.md  极氪009光辉_价格配置表.md  极氪7X_价格配置表.md  极氪8X_价格配置表.md  极氪9X_价格配置表.md  极氪MIX_价格配置表.md  极氪X_价格配置表.md  置换补贴政策.md  购车全流程指南.md  金融贷款方案.md
knowledge-base/保养/: 保养周期与项目清单.md  充电与能耗指南.md  日常使用注意事项.md  极氪App使用指南.md
knowledge-base/安全边界/: 不可承诺事项.md
knowledge-base/政策/: 召回与OTA升级说明.md  售后服务承诺书.md  国家置换补贴说明.md  整车与三电质保条款.md  新能源上牌指南.md
knowledge-base/维修/: 常见故障自查手册.md  维修预约与流程.md  道路救援申请指南.md
knowledge-base/车型/: 极氪001_规格参数.md  极氪007GT_规格参数.md  极氪007_规格参数.md  极氪009_规格参数.md  极氪009光辉_规格参数.md  极氪7X_规格参数.md  极氪8X_规格参数.md  极氪9X_规格参数.md  极氪MIX_规格参数.md  极氪X_规格参数.md  车型对比.md
knowledge-base/问法库/: 售中高频问法.md  售前高频问法.md  售后高频问法.md
pycore/core/: settings.py
pycore/services/: chat_service.py  knowledge_service.py  retrieval_service.py  suggest_service.py  ticket_service.py
scripts/: bulk_upload_knowledge.py
tests/: test_knowledge_chunker.py  test_retrieval_service.py
(+46 files in other folders)
